2004/02/02 23:34 (+0100) kaffeetisch

	* t/GtkComboBox.t: Always skip the failing tests because it's
	gtk+'s fault.  Needs to be changed once it's fixed.

2004/02/02 22:30 (+0100) kaffeetisch

	* t/GtkTextIter.t: Test begins_tag, ends_tag, toggles_tag,
	forward_to_tag_toggle, backward_to_tag_toggle and all the stuff
	introduced in 2.4.

	* t/GtkTextView.t: Test scroll_to_mark, scroll_mark_onscreen,
	move_mark_onscreen.

2004/02/01 01:12 (+0100) kaffeetisch

	* t/GtkTextView.t: Test [sg]et_overwrite and [sg]et_accepts_tab.

2004/01/31 23:59 (+0100) kaffeetisch

	A t/GdkX11.t
	A t/PangoContext.t
	A t/PangoFont.t
	A t/PangoTabs.t
	* MANIFEST: New tests.

2004/01/31 16:19 (+0100) kaffeetisch

	* t/GtkFileChooserDialog.t
	* t/GtkFileChooserWidget.t: Initialize gtk+.

	* xs/PangoContext: Don't warn about unregistered subclasses of
	Gtk2::Pango::Fontset.

	* xs/PangoFont.xs: Don't warn about unregistered subclasses.
	Implement get_family.  Make better_match also accept undef for
	old_match.  Move Gtk2::PangoFont::get_metrics and implement
	::describe.

2004/01/30 22:49 (-0500) muppetman

	A examples/filesel_multisel.pl
	A examples/multisel.pl
	M MANIFEST
	  some examples i had lying around.

2004/01/30 08:06 (-0500) rwmcfa1

	* t/Gdk.t: wholey crap, s missing from the work test, DISPLAY was unset
	so i didn't know it.

2004/01/29 20:07 (-0500) rwmcfa1

	* Glib.pm, README: unstable release 1.033

	* NEWS: updated

	* t/Gdk.t: init failure fixed, see below

	1.032 isn't going public, was a test failure with no DISPLAY in Gtk2

2004/01/29 19:10 (-0500) rwmcfa1

	* Gtk2.pm, README: unstable release 1.032

	* NEWS: updated

2004/01/29 18:30 (-0500) rwmcfa1

	* t/01.GtkWindow.t, t/GdkDrawable.t, t/GdkWindow.t, t/GtkPaned.t: 
	temporary stop-gap fixes for test failures against HEAD, remotely 
	running windowmaker, that's a mouth full.

2004/01/28 15:42 (-0500) rwmcfa1

	* xs/GtkCalendar.xs, xs/GtkRenderer.xs, xs/GtkTextChildAnchor.xs,
	xs/GtkTextView.xs: apidoc updates
